# AidFlow

./: .env.example  .gitignore  Dockerfile  EcoFeast_2.0_Updated_Roadmap.md  README.md  docker-compose.yml  project Overview  pyproject.toml  requirements-ci.txt  requirements-docker.txt  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  intake_agent.py  logistics_agent.py  matching_agent.py  orchestrator.py  state.py  urls.py  verification_agent.py  views.py
config/: settings.py  urls.py
donations/: admin.py  ml_service_deprecated.py  models.py  serializers.py  urls.py  views.py
donations/config/: settings.py  urls.py
donations/migrations/: 0001_initial.py  0002_initial.py  0003_donation_claimed_at_donation_confidence_and_more.py  0004_agentrun.py  0005_alter_agentrun_donation.py  0006_donation_updated_at.py
genai_service/: __init__.py  apps.py  chat_intake.py  config.py  explainer_llm.py  urls.py  views.py  vision_intake.py
ml_service/: __init__.py  apps.py  evaluate.py  explainer.py  feature_builder.py  predictor.py  trainer.py  urls.py  views.py
ml_service/models/: encoders.pkl  feature_builder_v1.pkl  freshness_xgb.json  (+2 more)
rag_service/: __init__.py  apps.py  matcher.py  ngo_embeddings.py  urls.py  views.py
templates/: agent_dashboard.html  auth.html  base.html  donor_dashboard.html  landing.html  map_dashboard.html  ngo_dashboard.html
tests/: conftest.py  test_agents.py  test_api.py  test_genai_service.py  test_ml_service.py  test_models.py  test_rag_service.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+2 files in other folders)
